ADD template to index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
 
   <main>
     <p>Welcome to my cookieshop. 👋</p>
-    <p>We currently have 42 cookies in stock.</p>
+    <p>We currently have <%= cookiesInStock %> cookies in stock.</p>
   </main>
 
   <footer>
