--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,24 +2,14 @@
 <html lang="en">
 <%- include('includes/head', {title: 'Home | Cookieshop' }) %>
 <body>
-  <header>
-    <h1>Cookieshop</h1>
-
-    <nav>
-      <a href="/">Home</a>&nbsp;|&nbsp;
-      <a href="/about">About</a>&nbsp;|&nbsp;
-      <a href="/cookies">Shop</a>&nbsp;|&nbsp;
-      <a href="/contact">Contact</a>
-    </nav>
-  </header>
+  
+  <%- include('includes/header') %>
 
   <main>
     <p>Welcome to my cookieshop. 👋</p>
     <p>We currently have <%= cookiesInStock %> cookies in stock.</p>
   </main>
 
-  <footer>
-    Made with 🍪 by Codecookies
-  </footer>
+  <%- include('includes/footer') %>
 </body>
 </html>
