ADD: cookie name to head

--- a/views/cookies/cookie-detail.ejs
+++ b/views/cookies/cookie-detail.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%- include('../includes/head', {title: 'Shop | Cookieshop'}) %>
+    <%- include('../includes/head', {title: `${cookie.name} | Cookieshop`}) %>
 <body>
     <%- include('../includes/header') %>
 
