ADD: link to '/cookies/new'

--- a/views/cookies/index.ejs
+++ b/views/cookies/index.ejs
@@ -17,6 +17,7 @@
           </li>
         <% }) %>
       </ul>
+      <p>Get involved! Contribute to our stock <a href="/cookies/new">here</a></p>
     </main>
 
   <%- include('../includes/footer') %>
