--- a/views/cookies/new.ejs
+++ b/views/cookies/new.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%- include('../includes/head', {title: 'Shop | Cookieshop'}) %>
+    <%- include('../includes/head', {title: 'New Cookie | Cookieshop'}) %>
 <body>
   <%- include('../includes/header') %>
 
